--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/typeorm": "^9.0.1",
+    "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
     "mongodb": "^3.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
